# astromorty

./: .gitmodules  AGENTS.md  CHANGELOG.md  Containerfile  README.md  ROADMAP.md  TODO.md  alembic.ini  compose.yaml  pyproject.toml  uv.lock.backup
.claude/: README.md
.cursor/: workspace.json
.gemini/: README.md
.github/: FUNDING.yml
.opencode/: README.md
docker/: entrypoint.sh
docs/: ENV_FIX_NEEDED.md  MIGRATION_COMPLETE.md  SUPABASE_UPSTASH_MIGRATION_STATUS.md  caching-strategy.md  components-v2-migration-plan.md  http-endpoint-implementation-status.md  http-endpoint-migration-plan.md  multi-language-optimization-analysis.md  role-connections-implementation-plan.md
scripts/: __init__.py  migrate_supabase_upstash.py  test_db_connection.py
scripts/astromorty/: __init__.py  start.py  version.py
scripts/config/: validate.py
scripts/db/: health.py  init.py  nuke.py  queries.py  schema.py  tables.py
src/astromorty/: __init__.py  main.py
src/dashboard/: pyproject.toml
src/worker/: .eslintrc.json  .gitignore  .npmrc  .prettierignore  .wranglerignore  DEPLOYMENT.md  README.md  package.json  tsconfig.json  wrangler.toml
tests/: __init__.py  conftest.py
tests/core/: test_dynamic_permission_system.py  test_guild_permission_controllers.py  test_logging.py  test_permission_bypass.py  test_restricted_commands.py
tests/database/: test_database_cli_commands.py  test_database_controllers.py  test_database_data_integrity.py  test_database_error_handling.py  test_database_migrations.py  test_database_model_creation.py  test_database_model_performance.py  (+7 more)
(+285 files in other folders)
