[project]
name = "dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.8"
dependencies = [
    "fastapi>=0.128.0",
    "flask>=3.1.2",
    "jinja2>=3.1.6",
    "pygments>=2.19.2",
    "reflex>=0.8.24.post1",
    "vercel>=0.3.6",
    "vercel-ai>=0.1.0",
    "workers-py>=1.7.0",
    "workers-runtime-sdk>=0.3.1",
]
